--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,234 +14,6 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">October 2019</h3>
-                <ul class="menu-list">
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Honey Lime Chicken with Butternut Squash.JPG"
-                      alt="Honey Lime Chicken with Butternut Squash"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Honey Lime Chicken with Butternut Squash
-                      </h4>
-                      <p>
-                        The perfect blend of squash, chicken and seasonings.
-                        Served over rice. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Apple Cider Pulled Chicken.JPG"
-                      alt="Apple Cider Pulled Chicken"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Apple Cider Pulled Chicken
-                      </h4>
-                      <p>
-                        My favorite shredded chicken sandwich. Comes with
-                        sourdough, cheddar, and veggies. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Enchilada Stuffed Chicken.JPG"
-                      alt="Enchilada Stuffed Chicken"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Enchilada Stuffed Chicken
-                      </h4>
-                      <p>
-                        Chicken stuffed with green chile and tomatoes and
-                        covered with enchilada sauce. Served with sautéed
-                        zucchini, corn and chiles. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Spicy Pork Burrito Bowls.JPG"
-                      alt="Spicy Pork Burrito Bowls"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Spicy Pork Burrito Bowls
-                      </h4>
-                      <p>
-                        Pork and veggies seasoned to your taste. Add some rice
-                        and you have the perfect burrito bowl! Comes with rice
-                        and cheese. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Cuban Sandwiches.JPG"
-                      alt="Cuban Sandwiches"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Cuban Sandwiches
-                      </h4>
-                      <p>
-                        Back by popular demand! Pork is slow cooked with citrus
-                        and herbs all day. Add ham and Swiss and you have an
-                        amazing sandwich. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Italian Stuffed Zucchini.JPG"
-                      alt="Italian Stuffed Zucchini"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Italian Stuffed Zucchini
-                      </h4>
-                      <p>
-                        Zucchini boats filled with flavorful meat sauce. Topped
-                        with mozzarella and baked until golden brown and
-                        delicious. (Stovetop then oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Red Wine Roast with Creamy Polenta and Roasted Radishes.JPG"
-                      alt="Red Wine Roast with Creamy Polenta and Roasted Radishes"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Red Wine Roast with Creamy Polenta and Roasted Radishes
-                      </h4>
-                      <p>
-                        Herbed roast cooked in red wine. Perfect for Sunday
-                        dinner and no one has to know it took you less than half
-                        an hour to make! (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Penne alla Vodka.JPG"
-                      alt="Penne alla Vodka"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Penne alla Vodka
-                      </h4>
-                      <p>
-                        A creamy tomato sauce is mixed with penne for one of my
-                        favorite pasta dishes. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_BBQ Tacos.JPG"
-                      alt="BBQ Tacos"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        BBQ Tacos
-                      </h4>
-                      <p>
-                        A twist on the usual Mexican flavors. Veggies are mixed
-                        with a quick BBQ sauce and stuffed into corn tortillas.
-                        (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Chickpea and Eggplant Curry.JPG"
-                      alt="Chickpea and Eggplant Curry"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Chickpea and Eggplant Curry
-                      </h4>
-                      <p>
-                        This delicious curry comes together in no time. Comes
-                        with rice. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Lemon Garlic Roasted Chicken.JPG"
-                      alt="Lemon Garlic Roasted Chicken"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Lemon Garlic Roasted Chicken
-                      </h4>
-                      <p>Juicy, roasted chicken and veggies. (Oven)</p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-10/web_Korean Beef.JPG"
-                      alt="Korean Beef"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Korean Beef
-                      </h4>
-                      <p>
-                        Tender shredded beef served over rice with veggies.
-                        (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-10/web_Colache.JPG"
-                      alt="Colache"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Colache
-                      </h4>
-                      <p>
-                        A classic Mexican dish turned into a hearty fall stew.
-                        Comes with rice. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-              <li>
                 <h3 class="subheading">November 2019</h3>
                 <ul class="menu-list">
                   <li>
@@ -418,11 +190,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-11/web_Pot Sticker Noodle Bowl.JPG"
+                    <img
+                      src="/Menu-Images/2019-11/web_Pot Sticker Noodle Bowls.JPG"
                       alt="Pot Sticker Noodle Bowl"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
                         Pot Sticker Noodle Bowl
@@ -491,6 +263,219 @@
                         Mix, or Monster Cookies. They are perfect for anyone you
                         need to give a quick, delicious handmade gift! Teachers,
                         friends, service providers, or just because! $9 each
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h3 class="subheading">December 2019</h3>
+                <ul class="menu-list">
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Baked French Toast with Praline Topping.JPG"
+                      alt="Baked French Toast with Praline Topping"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Baked French Toast with Praline Topping
+                      </h4>
+                      <p>
+                        My favorite family tradition. We have this amazing
+                        breakfast bake for all our big family breakfasts. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Orange Rosemary Chicken.JPG"
+                      alt="Orange Rosemary Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Orange Rosemary Chicken
+                      </h4>
+                      <p>
+                        Juicy, citrus marinated chicken served with veggies.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Honey Sriracha Chicken.JPG"
+                      alt="Honey Sriracha Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Honey Sriracha Chicken
+                      </h4>
+                      <p>
+                        A little spice to go with a little sweet! This will be
+                        your new favorite take-out substitute. Comes with
+                        veggies and zoodles. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_French Onion Chicken.JPG"
+                      alt="French Onion Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        French Onion Chicken
+                      </h4>
+                      <p>
+                        Tender chunks of chicken, caramelized onions, and Swiss
+                        cheese served over egg noodles. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Vegan Taco Soup.JPG"
+                      alt="Taco Soup"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Taco Soup
+                      </h4>
+                      <p>
+                        A flavorful, veggie loaded soup. It is my go-to for a
+                        filling meal in cold weather. Comes with or without
+                        chicken and cheese. (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Ropa Vieja.JPG"
+                      alt="Ropa Vieja"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Ropa Vieja
+                      </h4>
+                      <p>
+                        Beef roast slow cooked with peppers and tomatoes. A
+                        Midwest twist on a Cuban favorite. Comes with rice.
+                        (Slow Cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Stuffed Pepper Soup.JPG"
+                      alt="Stuffed Pepper Soup"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Stuffed Pepper Soup
+                      </h4>
+                      <p>
+                        A tomato-based soup filled with beef or mushrooms,
+                        peppers, and rice. A quick and delicious dinner.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Butter(less) Chickpeas.JPG"
+                      alt="Butter(less) Chickpeas"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Butter(less) Chickpeas
+                      </h4>
+                      <p>
+                        A vegan take on a classic Indian dish. Comes with rice.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-12/web_Smoky Sweet Potato and Chickpea Stew.JPG"
+                      alt="Smoky Sweet Potato and Chickpea Stew"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Smoky Sweet Potato and Chickpea Stew
+                      </h4>
+                      <p>
+                        A thick and delicious stew. A great meal to go with a
+                        good book. (Slow Cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-12/web_Lemon Thyme Pork with Spinach Rice.JPG"
+                      alt="Lemon Thyme Pork with Spinach Rice"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Lemon Thyme Pork with Spinach Rice
+                      </h4>
+                      <p>
+                        Pan cooked pork chops finished with a lemon thyme sauce.
+                        Served with a flavorful green rice. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-12/web_Cochinita Pibil.JPG"
+                      alt="Cochinita Pibil"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Cochinita Pibil (Mexican Shredded Pork)
+                      </h4>
+                      <p>
+                        Citrus and annatto seasoned pork is slow cooked until it
+                        falls apart. It makes amazing tacos, nachos, or
+                        quesadillas. (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-12/web_French Dip Sandwiches.JPG"
+                      alt="French Dip Sandwiches"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        French Dip Sandwiches
+                      </h4>
+                      <p>
+                        Slow cooked beef with a perfectly seasoned au jus.
+                        Served with rolls and veggies. (Slow cooker)
                       </p>
                     </div>
                   </li>
