Holiday Sides and Gifts in a Jar

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -239,33 +239,6 @@
                       </p>
                     </div>
                   </li>
-
-                  <li>
-                    <div>
-                      <h4>
-                        Thanksgiving Sides!
-                      </h4>
-                      <p>
-                        Dinner Delights can make everything except the turkey.
-                        Let us help make your holiday easier. Contact Andrea to
-                        see what we can do!
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <div>
-                      <h4>
-                        Gifts in a Jar are back!
-                      </h4>
-                      <p>
-                        Through December you can make Hot Cocoa Mix, Pancake
-                        Mix, or Monster Cookies. They are perfect for anyone you
-                        need to give a quick, delicious handmade gift! Teachers,
-                        friends, service providers, or just because! $9 each
-                      </p>
-                    </div>
-                  </li>
                 </ul>
               </li>
               <li>
@@ -483,6 +456,53 @@
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h3 class="text-center">Thanksgiving Sides!</h3>
+          <p>
+            Dinner Delights can make everything except the turkey. Let us help
+            make your holiday easier. Contact Andrea to see what we can do!
+          </p>
+          <p class="text-center">
+            Order your sides today!
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <a
+            href="http://buytickets.at/dinnerdelights/314335"
+            class="btn btn-buy-jars"
+            target="_blank"
+            >ORDER SIDES</a
+          >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h3 class="text-center">Gifts in a Jar are back!</h3>
+          <p>
+            Through December you can make
+            <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>.
+            They are perfect for anyone you need to give a quick, delicious
+            handmade gift! Teachers, friends, service providers, or just
+            because! $9 each!
+          </p>
+          <p class="text-center">
+            Order your jars today!
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <a
+            href="http://buytickets.at/dinnerdelights/314337"
+            class="btn btn-buy-jars"
+            target="_blank"
+            >ORDER JARS</a
+          >
         </div>
       </div>
       <div class="row menu-btn-container">
