--- a/themes/dinnerdelights/source/css/style.css
+++ b/themes/dinnerdelights/source/css/style.css
@@ -646,7 +646,7 @@ textarea:focus {
 
 /*Menu*/
 .menu-btn-container {
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 .flexslider {
@@ -669,11 +669,11 @@ textarea:focus {
 }
 
 .flex-control-paging li a {
-  background: #8C9C78;
+  background: #8c9c78;
   background: rgba(120, 156, 74, 0.5);
 }
 .flex-control-paging li a:hover {
-  background: #809C5D;
+  background: #809c5d;
   background: rgba(120, 156, 74, 0.7);
 }
 .flex-control-paging li a.flex-active {
