--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,234 +14,6 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">November 2019</h3>
-                <ul class="menu-list">
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Sweet and Spicy Bacon Wrapped Chicken.JPG"
-                      alt="Sweet and Spicy Bacon Wrapped Chicken"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Sweet and Spicy Bacon Wrapped Chicken
-                      </h4>
-                      <p>
-                        The name says it all! Bacon wrapped chicken seasoned
-                        with a little sweet and a little spice. Comes with
-                        veggies. (Baked)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Shredded Mexican Chicken with Rice.JPG"
-                      alt="Shredded Mexican Chicken with Rice"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Shredded Mexican Chicken with Rice
-                      </h4>
-                      <p>
-                        Rice bowls topped with the most flavorful chicken. (Slow
-                        Cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Chicken with Spinach and Sun Dried Tomatoes.JPG"
-                      alt="Chicken with Spinach and Sun Dried Tomatoes"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Chicken with Spinach and Sun Dried Tomatoes
-                      </h4>
-                      <p>
-                        Baked chicken topped with spinach, tomatoes, and cheese.
-                        A great way to add more veggies to your day! Comes with
-                        veggies. (Baked)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Sweet Potato Turkey Hash.JPG"
-                      alt=""
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Sweet Potato Turkey Hash
-                      </h4>
-                      <p>
-                        This is one of my favorite ways to use turkey! Sautéed
-                        sweet potatoes and turkey slightly sweetened with maple
-                        syrup. Perfect for breakfast or dinner! (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Apple Glazed Pork with Cheesy Grits.JPG"
-                      alt="Apple Glazed Pork with Cheesy Grits"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Apple Glazed Pork with Cheesy Grits
-                      </h4>
-                      <p>
-                        Slightly sweet, seasoned pork served over cheesy grits.
-                        (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Pork Chops with Cider Pan Sauce.JPG"
-                      alt="Pork Chops with Cider Pan Sauce"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Pork Chops with Cider Pan Sauce
-                      </h4>
-                      <p>
-                        Juicy pork chops are finished with a sweet and savory
-                        pan sauce. Comes with veggies. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Corn Chowder.JPG"
-                      alt="Corn Chowder"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Corn Chowder
-                      </h4>
-                      <p>
-                        I love soup and this one has moved to the top of my
-                        favorites list! Slow cooked all day with a touch of
-                        cream or coconut milk added at the end. (Slow cooker or
-                        stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Golden Coconut Lentil Soup.JPG"
-                      alt=""
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Golden Coconut Lentil Soup
-                      </h4>
-                      <p>
-                        A great soup filled with bright flavors. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Harissa Veggie Bowl.JPG"
-                      alt="Harissa Veggie Bowl"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Harissa Veggie Bowl
-                      </h4>
-                      <p>
-                        A great selection of fall veggies, roasted and served
-                        over quinoa. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Roasted Veggie Tacos.JPG"
-                      alt="Roasted Veggie Tacos"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Roasted Veggie Tacos
-                      </h4>
-                      <p>
-                        The best tacos filled with veggies and flavor! (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-11/web_Pot Sticker Noodle Bowls.JPG"
-                      alt="Pot Sticker Noodle Bowl"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>
-                        Pot Sticker Noodle Bowl
-                      </h4>
-                      <p>
-                        The flavors of pot stickers in a quick and easy noodle
-                        bowl. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-11/web_Beef Stew.JPG"
-                      alt="Beef Stew"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Beef Stew
-                      </h4>
-                      <p>
-                        A hearty fall favorite. This flavorful beef stew is full
-                        of veggies. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2019-11/web_Beef Stroganoff.JPG"
-                      alt="Beef Stroganoff"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Beef Stroganoff
-                      </h4>
-                      <p>
-                        A classic meal made into a freezer meal favorite. Comes
-                        with noodles. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-              <li>
                 <h3 class="subheading">December 2019</h3>
                 <ul class="menu-list">
                   <li>
@@ -454,11 +226,27 @@
                   </li>
                 </ul>
               </li>
+              <!-- <li>
+                <h3 class="subheading">January 2020</h3>
+                <ul class="menu-list">
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-01/web_.JPG"
+                      alt=""
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4></h4>
+                      <p></p>
+                    </div>
+                  </li>
+                </ul>
+              </li> -->
             </ul>
           </div>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h3 class="text-center">Thanksgiving Sides!</h3>
           <p>
@@ -479,7 +267,7 @@
             >ORDER SIDES</a
           >
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h3 class="text-center">Gifts in a Jar are back!</h3>
