--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -246,9 +246,9 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h3 class="text-center">Thanksgiving Sides!</h3>
+          <h3 class="text-center">Holiday Sides!</h3>
           <p>
             Dinner Delights can make everything except the turkey. Let us help
             make your holiday easier. Contact Andrea to see what we can do!
@@ -267,7 +267,7 @@
             >ORDER SIDES</a
           >
         </div>
-      </div> -->
+      </div>
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h3 class="text-center">Gifts in a Jar are back!</h3>
