--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -141,11 +141,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                       src="/Menu-Images/2020-02/web_Hawaiian Meatballs.JPG"
                       alt="Hawaiian Meatballs"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
                         Hawaiian Meatballs
@@ -159,11 +159,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                       src="/Menu-Images/2020-02/web_Pork Stew.JPG"
                       alt="Pork Stew"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
                         Pork Stew
@@ -177,11 +177,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                       src="/Menu-Images/2020-02/web_Jerk Pulled Chicken.JPG"
                       alt="Jerk Pulled Chicken"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
                         Jerk Pulled Chicken
@@ -190,6 +190,187 @@
                         A taste of the tropics during winter. Chicken is
                         seasoned and slow cooked with a tangy homemade bbq
                         sauce. Served with buns and veggies. (Slow Cooker)
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <h3 class="subheading">February 2020</h3>
+
+                <ul class="menu-list">
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-03/web_Orange Chicken.JPG"
+                      alt="Orange Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Orange Chicken
+                      </h4>
+                      <p>
+                        My favorite Chinese meal. Lightly breaded chicken tossed
+                        with an orange sauce and served with rice and veggies.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-03/web_Pineapple Sage Chicken.JPG"
+                      alt="Pineapple Sage Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Pineapple Sage Chicken
+                      </h4>
+                      <p>
+                        Juicy, citrus marinated chicken served with veggies.
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-03/web_Corn Chowder.JPG"
+                      alt="Corn Chowder"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Corn Chowder
+                      </h4>
+                      <p>
+                        I love soup and this one has moved to the top of my
+                        favorites list! Slow cooked all day with a touch of
+                        cream or coconut milk added at the end. (Slow cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-03/web_Sausage Balls.JPG"
+                      alt="Sausage Balls"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Sausage Balls
+                      </h4>
+                      <p>
+                        Juicy, cheesy sausage meatballs are baked and served
+                        with veggies. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-03/web_Bacon Wrapped Pork Chops.JPG"
+                      alt="Bacon Wrapped Pork Chops with Jalapeno Creamed Corn"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Bacon Wrapped Pork Chops with Jalapeno Creamed Corn
+                      </h4>
+                      <p>
+                        Juicy pork chops wrapped in crispy bacon and served with
+                        homemade creamed corn. It is the perfect Iowa farm meal!
+                        (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2020-03/web_Margarita Chicken Tacos.JPG"
+                      alt="Margarita Chicken Tacos"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Margarita Chicken Tacos
+                      </h4>
+                      <p>
+                        Chicken is slow cooked with tequila and lime juice to
+                        make your new Taco Tuesday favorite. Comes with
+                        tortillas. (Slow Cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2020-03/web_Chicken and Rice Soup.JPG"
+                      alt="Chicken and Rice Soup"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Chicken and Rice Soup
+                      </h4>
+                      <p>
+                        Flavorful chicken soup is cooked all day and served with
+                        rice. (Slow Cooker)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2020-03/web_Monte Cristo Casserole.JPG"
+                      alt="Monte Cristo Casserole"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Monte Cristo Casserole
+                      </h4>
+                      <p>
+                        Croissants are layered with ham, turkey, and swiss then
+                        soaked in a sweetened custard and baked to perfection.
+                        (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2020-03/web_Greek Meatballs.JPG"
+                      alt="Greek Meatballs"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Greek Meatballs
+                      </h4>
+                      <p>
+                        The flavors of the Mediterranean in a handy little
+                        meatballs. Comes with pitas and veggies. (Oven)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2020-03/web_Cheeseburger Gnocchi.JPG"
+                      alt="Cheeseburger Gnocchi"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>
+                        Cheeseburger Gnocchi
+                      </h4>
+                      <p>
+                        Cheeseburger pasta with potato dumplings. The best parts
+                        of a burger and fries without the bun! (Stovetop)
                       </p>
                     </div>
                   </li>
