--- a/assets/styles/elements/fonts.scss
+++ b/assets/styles/elements/fonts.scss
@@ -11,6 +11,7 @@
       format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -25,4 +26,5 @@
       format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
