--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,22 +14,58 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">March 2020</h3>
+                <h3 class="subheading">April 2020</h3>
 
                 <ul class="menu-list">
                   <li>
                     <img
-                      src="/Menu-Images/2020-03/web_Orange Chicken.JPG"
-                      alt="Orange Chicken"
+                      src="/Menu-Images/2020-04/web_Chicken Flautas.JPG"
+                      alt="Chicken Flautas"
                       class="menu-image"
                     />
                     <div>
                       <h4>
-                        Orange Chicken
+                        Chicken Flautas
                       </h4>
                       <p>
-                        My favorite Chinese meal. Lightly breaded chicken tossed
-                        with an orange sauce and served with rice and veggies.
+                        My favorite Mexican(ish) meal! Cheesy, seasoned chicken
+                        wrapped in flour tortillas and baked or fried. (Crockpot
+                        then baked or fried)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-04/web_Cashew Chicken.JPG"
+                      alt="Cashew Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Cashew Chicken
+                      </h4>
+                      <p>
+                        Tender bites of chicken are cooked with veggies and
+                        cashews then topped with a sweet and tangy sauce. Comes
+                        with rice. (Stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2020-04/web_Chicken Tinga Tacos.JPG"
+                      alt="Chicken Tinga Tacos"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>
+                        Chicken Tinga Tacos
+                      </h4>
+                      <p>
+                        Chicken and chorizo are mixed together to create a
+                        delicious taco filling. Comes with corn tortillas.
                         (Stovetop)
                       </p>
                     </div>
@@ -37,160 +73,128 @@
 
                   <li>
                     <img
-                      src="/Menu-Images/2020-03/web_Pineapple Sage Chicken.JPG"
-                      alt="Pineapple Sage Chicken"
+                      src="/Menu-Images/2020-04/web_Ham and Cheese Pot Pie.JPG"
+                      alt="Ham and Cheese Pot Pie"
                       class="menu-image"
                     />
                     <div>
                       <h4>
-                        Pineapple Sage Chicken
+                        Ham and Cheese Pot Pie
                       </h4>
                       <p>
-                        Juicy, citrus marinated chicken served with veggies.
-                        (Stovetop)
+                        Creamy ham and Swiss filling is topped with puff pastry
+                        to create a quick and filling pot pie. (Stove top then
+                        baked)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2020-03/web_Corn Chowder.JPG"
-                      alt="Corn Chowder"
+                      src="/Menu-Images/2020-04/web_Cuban Sandwiches.JPG"
+                      alt="Cuban Sandwiches"
                       class="menu-image"
                     />
                     <div>
                       <h4>
-                        Corn Chowder
+                        Cuban Sandwiches
                       </h4>
                       <p>
-                        I love soup and this one has moved to the top of my
-                        favorites list! Slow cooked all day with a touch of
-                        cream or coconut milk added at the end. (Slow cooker)
+                        Back by popular demand! Pork is slow cooked with citrus
+                        and herbs. Add ham and Swiss and you have an amazing
+                        sandwich. (Slow cooker)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2020-03/web_Sausage Balls.JPG"
-                      alt="Sausage Balls"
+                      src="/Menu-Images/2020-04/web_Pork Eggroll Bowls.JPG"
+                      alt="Pork Eggroll Bowls"
                       class="menu-image"
                     />
                     <div>
                       <h4>
-                        Sausage Balls
+                        Pork Eggroll Bowls
                       </h4>
                       <p>
-                        Juicy, cheesy sausage meatballs are baked and served
-                        with veggies. (Oven)
+                        All the best parts of eggrolls and none of the mess!
+                        Ground pork and veggies topped with crispy wonton
+                        strips. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2020-03/web_Bacon Wrapped Pork Chops.JPG"
-                      alt="Bacon Wrapped Pork Chops with Jalapeno Creamed Corn"
+                      src="/Menu-Images/2020-04/web_Maple Sausage Breakfast Sandwiches.JPG"
+                      alt="Maple Sausage Breakfast Sandwiches"
                       class="menu-image"
                     />
                     <div>
                       <h4>
-                        Bacon Wrapped Pork Chops with Jalapeno Creamed Corn
+                        Maple Sausage Breakfast Sandwiches
                       </h4>
                       <p>
-                        Juicy pork chops wrapped in crispy bacon and served with
-                        homemade creamed corn. It is the perfect Iowa farm meal!
-                        (Stovetop)
+                        Make your own sausage patties for these delicious
+                        breakfast sandwiches. Comes with eggs, cheese, English
+                        muffins, and hash browns. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
-                    <!-- <img
-                      src="/Menu-Images/2020-03/web_Margarita Chicken Tacos.JPG"
-                      alt="Margarita Chicken Tacos"
+                    <img
+                      src="/Menu-Images/2020-04/web_Sriracha and Cheddar Juicy Lucy.JPG"
+                      alt="Sriracha and Cheddar Juicy Lucy"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
-                        Margarita Chicken Tacos
+                        Sriracha and Cheddar Juicy Lucy
                       </h4>
                       <p>
-                        Chicken is slow cooked with tequila and lime juice to
-                        make your new Taco Tuesday favorite. Comes with
-                        tortillas. (Slow Cooker)
+                        Cheddar stuffed burgers with a little (optional) kick.
+                        Comes with buns and veggies. (Grilled or stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
-                    <!-- <img
-                      src="/Menu-Images/2020-03/web_Chicken and Rice Soup.JPG"
-                      alt="Chicken and Rice Soup"
+                    <img
+                      src="/Menu-Images/2020-04/web_Greek Orzo.JPG"
+                      alt="Greek Orzo (Manestra)"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
-                        Chicken and Rice Soup
+                        Greek Orzo (Manestra)
                       </h4>
                       <p>
-                        Flavorful chicken soup is cooked all day and served with
-                        rice. (Slow Cooker)
+                        Beef and tomatoes are cooked with orzo in my take on
+                        this classic Greek comfort food dish. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
-                    <!-- <img
-                      src="/Menu-Images/2020-03/web_Monte Cristo Casserole.JPG"
-                      alt="Monte Cristo Casserole"
+                    <img
+                      src="/Menu-Images/2020-04/web_Meatball Parmesan.JPG"
+                      alt="Meatball Parmesan"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>
-                        Monte Cristo Casserole
+                        Meatball Parmesan
                       </h4>
                       <p>
-                        Croissants are layered with ham, turkey, and swiss then
-                        soaked in a sweetened custard and baked to perfection.
+                        Juicy Italian flavored meatballs are baked with marinara
+                        and mozzarella. Comes with awesome bread and veggies.
                         (Oven)
                       </p>
                     </div>
                   </li>
 
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2020-03/web_Greek Meatballs.JPG"
-                      alt="Greek Meatballs"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Greek Meatballs
-                      </h4>
-                      <p>
-                        The flavors of the Mediterranean in a handy little
-                        meatballs. Comes with pitas and veggies. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <!-- <img
-                      src="/Menu-Images/2020-03/web_Cheeseburger Gnocchi.JPG"
-                      alt="Cheeseburger Gnocchi"
-                      class="menu-image"
-                    /> -->
-                    <div>
-                      <h4>
-                        Cheeseburger Gnocchi
-                      </h4>
-                      <p>
-                        Cheeseburger pasta with potato dumplings. The best parts
-                        of a burger and fries without the bun! (Stovetop)
-                      </p>
-                    </div>
-                  </li>
                 </ul>
               </li>
             </ul>
