--- a/assets/styles/elements/body.scss
+++ b/assets/styles/elements/body.scss
@@ -1,11 +1,11 @@
-@import "~/assets/styles/variables.scss";
+@use "../variables.scss";
 
 body {
-  font-family: $base-font-family;
+  font-family: variables.$base-font-family;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   position: relative;
-  background-color: $secondary-light;
+  background-color: variables.$secondary-light;
   background-image: url("https://res.cloudinary.com/dinner-delights/image/upload/c_limit,f_auto,q_auto:low,w_1000/v1584279687/wood-grain.jpg");
   background-size: 100% auto;
   background-repeat: repeat-y;
