--- a/assets/styles/elements/headings.scss
+++ b/assets/styles/elements/headings.scss
@@ -1,4 +1,4 @@
-@import "~/assets/styles/variables.scss";
+@use "../variables.scss";
 
 h1,
 h2,
@@ -6,12 +6,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $heading-font-family;
-  color: $primary-eggplant;
+  font-family: variables.$heading-font-family;
+  color: variables.$primary-eggplant;
   line-height: 1.3;
 }
 
 .subheading {
-  color: $primary-pepper;
-  font-family: $subheading-font-family;
+  color: variables.$primary-pepper;
+  font-family: variables.$subheading-font-family;
 }
