--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -82,3 +82,23 @@ html {
   font-style: italic;
   font-weight: 400;
 }
+
+.menu-content {
+  border: 8px solid $primary-olive-green;
+  background-color: $secondary-light;
+  padding: 2vw 5vw 5vw 5vw;
+}
+
+.menu-btn-container {
+  margin-top: 30px;
+}
+
+@media (min-width: 768px) {
+  .menu-container {
+    padding: 15px;
+  }
+}
+
+hr {
+  border-color: $primary-pepper;
+}
